
syntax = "proto3";

package order_app_package;

service orderApp {
    rpc placeOrder         (order)              returns (dbOrder) {}
    rpc assignRepairman    (repairmanOrderDate) returns (status)  {}
    rpc repairmanConfirmed (repairmanOrder)     returns (status)  {}
    rpc reapirmanRejected  (repairmanOrder)     returns (status)  {}
    rpc customerCanceled   (cancelMess)         returns (status)  {}
    rpc orderCompliting    (sendingSms)         returns (status)  {}
    rpc orederCompleted    (completeMess)       returns (status)  {}
}

message order {
    string customerId             = 1 ;
    string customerVehicle        = 2 ;
    string promotion              = 3 ;
    schduleData scheduling        = 4 ;
    string address                = 5 ;
    repeated orderItem orderItems = 6 ;
}

message dbOrder {
    string id                     = 1 ;
    string orderNo                = 2 ;
    string customerId             = 3 ;
    string customerVehicle        = 4 ;
    string orderDate              = 6 ;
    int32  grossAmount            = 7 ;
    int32  totalPrice             = 8 ;
    int32  discount               = 9 ;
    int32  transportPrice         = 10 ;
    int32  paidAmount             = 11 ;
    int32  workType               = 12 ;
    string state                  = 13 ;
    schduleData scheduling        = 14 ;
    string address                = 15 ;
    repeated orderItem orderItems = 16 ;
}

message schduleData {
    string date    = 1 ;
    int32  from    = 2 ;
    int32  through = 3 ;

}

message orderItem {
    string categoryId    = 1 ;
    string serviceId     = 2 ;
    string productId     = 3 ;
    int32  categoryPrice = 4 ;
    int32  servicePrice  = 5 ;
    int32  productPrice  = 6 ;
    int32  totalPrice    = 7 ;
}

message repairmanOrderDate {
    string repairmanId     = 1 ;
    string orderId         = 2 ;
    schduleData scheduling = 3 ;
}

message repairmanOrder {
    string repairmanId     = 1 ;
    string orderId         = 2 ;
}

message sendingSms {
    string repairmanId     = 1 ;
    string orderId         = 2 ;
    string mobileNo        = 3 ;
}

message cancelMess {
    string orderId    = 1 ;
    string customerId = 2 ;
}

message completeMess {
    string repairmanId = 1 ;
    string orderId     = 2 ;
    string code        = 3 ;
}

message status {
    string status = 1 ;
}
